# naval_battle

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  GameView.qml  README.md  assets.qrc  naval_battle  qml.qrc
include/game/: Game.h
include/gui/: MainWindow.h
qml/: GameView.qml
src/: main  main.cpp
src/core/: Game.cpp
src/game/: Game.cpp
src/gui/: GameWrapper.cpp  GameWrapper.h  MainWindow.cpp  main.cpp
